--- a/style.css
+++ b/style.css
@@ -297,4 +297,8 @@ header button {
         width: 100%;
         top: 100px;
     }
+    #addtobaag_button,#favorite{
+        width:100%;
+    }
 }
+
